--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,5 @@ typing_extensions==4.15.0
 uvicorn==0.40.0
 sqlalchemy==2.0.45
 pymysql==1.1.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
